# snotes

./: About_this_app.h  CMakeLists.txt  Defaults.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NoteViewsArea.cpp  NoteViewsArea.h  NotesFolderModel.cpp  NotesFolderModel.h  NotesListView.cpp  NotesListView.h  ProjectFolderModel.h  SNotesMarkdownEditor.cpp  SNotesMarkdownEditor.h  Settings.h  do_not_change_font_size.patch  main.cpp  vcpkg.json
resources/: resources.qrc
resources/icons/: icon.icns
resources/vendor_defaults/notes/: Test.md  Test2.md
